<resources>
    <string name="app_name">Inventario</string>
    <string name="registrarse">Registrarse</string>
    <string name="loguearse">Loguearse</string>
    <string name="usuario">Usuario:</string>
    <string name="pass">Password:</string>
    <string name="buscador">Buscador de objetos</string>
    <string name="vivienda">Vivienda</string>
    <string name="habitación">Habitación</string>
    <string name="espacio">Espacio</string>
    <string name="siguiente">Siguiente</string>
    <string name="nombre">Nombre:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="minimo">Mínimo:</string>
    <string name="consumible">Consumible:</string>
    <string name="desc">Descripción:</string>
    <string name="loc">Localización:</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="toast_campos_registro">Complete ambos campos para registrarse</string>
    <string name="toast_usuario_correcto">Usuario correcto</string>
    <string name="toast_usuario_incorrecto">Usuario incorrecto</string>
    <string name="toast_usuario_existente">El usuario ya existe</string>
    <string name="toast_usuario_registrado">Usuario registrado</string>
    <string name="eliminar_objeto">Eliminar Objeto</string>
    <string name="confirmar_borrar">¿Confirma que desea borrar este objeto?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="toast_info_actulizada">Información actulizada</string>
    <string name="toast_problema">Ups, ha habido algún problema</string>
    <string name="toast_objeto_borrado">Objeto borrado</string>
    <string name="toast_no_objetos_asociados">Este espacio no tiene objetos asociados</string>
    <string name="toast_hab_no_asociadas">Esta vivienda no tiene habitaciones asociadas</string>
    <string name="toast_espacio_no_asociado">Esta habitación no tiene epacios asociados</string>
    <string name="toast_relleno_log">Rellene todos los campos para loguearse</string>
    <string name="credenciales">Credenciales</string>
    <string name="sonido">Sonido</string>
    <string name="volumen">Volumen</string>
    <string name="vol_fallo">Volumen de fallo</string>
    <string name="boton">Botón</string>
    <string name="toast_user_vacio">El usuario no tiene viviendas asociadas, puede insertarlas en la aplicacion de escritorio</string>
</resources>